--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "dle-snippet",
     "displayName": "DLE Snippet",
     "description": "Datalife Engine Template tags for vscode",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "icon": "images/dle.png",
     "publisher": "jyarali",
     "repository": {
@@ -15,7 +15,7 @@
         "email": "jamaldanlod@gmail.com"
     },
     "engines": {
-        "vscode": "^1.25.0"
+        "vscode": "0.10.x"
     },
     "galleryBanner": {
         "color": "#FF9800",
